<resources>
    <string name="app_name">Generic Wallet</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="strong_password">Set an strong password to secure your account.</string>
    <string name="Continuee">Continue</string>
    <string name="password">Password</string>
    <string name="ent_password">Enter your password</string>
    <string name="confirm_password">Confirm Transaction Pin</string>
    <string name="confirm">CONFIRM</string>
    <string name="successfully_done">Successfully Done</string>
    <string name="is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_your_account">Login to your account.</string>
    <string name="register">Register</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="enter_your_email_or_phone_number">Enter your Email or Phone Number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="set_an_transaction_pin_to_secure_your_payments">Set an transaction pin to secure your payments.</string>
    <string name="email_address">Enter your email address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_addresss">Email Address</string>
    <string name="Continue">CONTINUE</string>
    <string name="terms_and_condition_string"><![CDATA[By continuing you agree to the Terms & Conditions and Privacy Policy.]]></string>
    <string name="recieve_code">Didn\'t received the code? Retry (02:00)</string>
    <string name="verification">verification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_password">Set Password</string>
    <string name="transaction_password">Set Transaction Pin</string>
    <string name="tap_to_fill_kyc">Tap to Fill KYC</string>
    <string name="complete_kyc">Complete your KYC to increase your monthly limit of NRP 5,000.</string>
    <string name="send_money">Send Money</string>
    <string name="request_money">Request Money</string>
    <string name="load_wallet">Load Wallet</string>
    <string name="see_all">See all</string>
    <string name="offers">Offers</string>
    <string name="name_lastname">Name LastName</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="npr">NPR</string>
    <string name="_5892_00">5892.00</string>
    <string name="reports">Reports</string>
    <string name="top_up">Top Up</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="electricity">Electricity</string>
    <string name="other">Other</string>
    <string name="statements">Statements</string>
    <string name="fill_kyc">Fill KYC</string>
    <string name="xxxx">XXXX</string>
    <string name="select_from_recent_transactions">Select From Recent Transactions</string>
    <string name="enter_wallet_user_id">Enter Wallet User ID</string>
    <string name="amount_to_be_sent">Amount To Be Sent</string>
    <string name="npr_xxxx">NPR XXXX</string>
    <string name="wallet_user">Wallet User</string>
    <string name="wallet_user_id">Wallet User ID</string>
    <string name="purpose">Purpose</string>
    <string name="user_name">User Name</string>
    <string name="hash">########</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="payment_method">Payment Method</string>
    <string name="wallet">Wallet</string>
    <string name="generic_wallet">Generic Wallet</string>
    <string name="_98">98*******</string>
    <string name="sufficient_balance">Sufficient Balance</string>
    <string name="your_transaction_has_been_successful">Your transaction has been successful.</string>
    <string name="amount">Amount</string>
    <string name="service">Service</string>
    <string name="download_pdf">Download PDF</string>
    <string name="dashboard">DashBoard</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="select_purpose">Select Purpose</string>
    <string name="remarks">Remarks</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="search_bank">Search Bank</string>
    <string name="bank">Bank</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="transfer_using">Transfer Using</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="cashback_2">Cashback 2%</string>
    <string name="ntc">Ntc</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_amount_paying">Total Amount Paying</string>
    <string name="landline">Landline</string>
    <string name="counter">Counter</string>
    <string name="enter_sc_number">Enter SC Number</string>
    <string name="sc_number">SC Number</string>
    <string name="customer_id">Customer ID</string>
    <string name="enter_customer_id">Enter Customer ID</string>
    <string name="nea">NEA</string>
    <string name="hashwithdot">###.##.#####</string>
    <string name="neahash">NEA####</string>
    <string name="previous_dues">Previous Dues</string>
    <string name="dues_date_from">Dues Date From</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="pay_in_advance">Pay in Advance</string>
    <string name="pay">Pay</string>
    <string name="water">Water</string>
    <string name="nwsc">NWSC</string>
    <string name="internet">Internet</string>
    <string name="world_link">World Link</string>
    <string name="enter_isp_username">Enter ISP Username</string>
    <string name="username">Username</string>
    <string name="tv">TV</string>
    <string name="service_provider">Service Provider</string>
    <string name="status">Status</string>
    <string name="selected_plan">Selected Plan</string>
    <string name="duration">Duration</string>
    <string name="cashback">Cashback</string>
    <string name="plan">Plan</string>
    <string name="dataPack">Data Pack</string>
    <string name="active">Active</string>
    <string name="enter_transistion_pin">Enter Transaction Pin</string>
    <string name="send">send</string>
    <string name="more">More</string>
    <string name="Daraz">Daraz</string>
    <string name="food_mandu">Foodmandu</string>
    <string name="platinum">Club Platinum</string>
    <string name="aanapurna">Aanapurna V.</string>
    <string name="ncell_top_up">Ncell TopUp</string>
    <string name="dish_home_price">Dish Home</string>
    <string name="balance">Balance</string>
    <string name="bill_payments">Bill Payments</string>
    <string name="bookings">Bookings</string>
    <string name="free_payment">Free Payment</string>
    <string name="merchant">Merchant</string>
    <string name="food">Food</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="utilities">Utilities</string>
    <string name="welcome">welcome,</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="welcome_">welcome,</string>
    <string name="xx_x">XX.X</string>
    <string name="recent_payments">Recent Payments</string>
    <string name="logout">Logout</string>

</resources>