<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/dimen_16"
    android:paddingEnd="@dimen/dimen_16"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.generic.wallet.authfragments.LogInFragment">


    <TextView
        android:id="@+id/createAnAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/welcome_back"
        android:textColor="@color/bold_text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterYourInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:fontFamily="@font/quicksand"
        android:text="@string/login_to_your_account"
        android:textColor="@color/bold_text_color"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAnAccountText" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="14sp"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@color/button_purple"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen_40"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/registerFragmentImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="14sp"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/lorem_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterYourInfoText"
        android:layout_marginTop="@dimen/dimen_32"
        android:src="@drawable/loginimage"
        />

    <!--  Email or   Phone number-->
    <TextView
        android:id="@+id/mobileNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/email_or_phone_number"
        android:textColor="@color/light_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerFragmentImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email_or_phone_number"
        android:id="@+id/phoneNumberEditText"
        app:layout_constraintTop_toBottomOf="@id/mobileNumberText"
        android:layout_marginTop="@dimen/dimen_8"
        app:boxStrokeWidth="0dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_border"
            android:textColor="@color/edit_text_hint_color"
            android:fontFamily="@font/quicksand"
            android:textSize="14sp"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <!--   -->
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24"
        android:fontFamily="@font/quicksand_medium"
        android:text="Password"
        android:textColor="@color/light_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberEditText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_password_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:boxStrokeWidth="0dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="@dimen/dimen_8"
        android:hint="@string/enter_your_password">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/quicksand"
            android:textSize="14sp"
            android:textColor="@color/edit_text_hint_color"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgetPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="12sp"
        android:textColor="@color/button_purple"
        app:layout_constraintTop_toBottomOf="@+id/enter_password_two"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dimen_16"
        android:fontFamily="@font/quicksand_medium"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/quicksand_bold"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@id/forgetPasswordText"
        android:layout_marginTop="@dimen/dimen_48"
        android:textColor="@color/white"
        />




</androidx.constraintlayout.widget.ConstraintLayout>