<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <CheckBox
        android:id="@+id/payInAdvanceCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_in_advance"
        android:textSize="14sp"
        android:buttonTint="@color/button_purple"
        android:textColor="@color/black24"
        android:fontFamily="@font/quicksand_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/amountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/sc_number"
        android:visibility="gone"
        android:textColor="@color/light_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payInAdvanceCheckBox" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_sc_number"
        android:id="@+id/amountEditText"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/amountText"
        android:layout_marginTop="@dimen/dimen_8"
        app:boxStrokeWidth="0dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_border"
            android:textColor="@color/edit_text_hint_color"
            android:fontFamily="@font/quicksand"
            android:textSize="14sp"
            />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

