<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/dimen_16"
    android:paddingEnd="@dimen/dimen_16"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.sample01.com.generic.wallet.authfragments.ForgotPasswordFragment">



    <TextView
        android:id="@+id/enterYourInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dimen_8"
        android:fontFamily="@font/quicksand"
        android:text="@string/set_an_transaction_pin_to_secure_your_payments"
        android:textColor="@color/bold_text_color"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/registerFragmentImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="14sp"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/lorem_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterYourInfoText"
        android:layout_marginTop="@dimen/dimen_40"
        android:src="@drawable/forgotpwpg"
        />

    <!--  Email or   Phone number-->
    <TextView
        android:id="@+id/mobileNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/email_or_phone_number"
        android:textColor="@color/light_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerFragmentImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email_or_phone_number"
        android:id="@+id/phoneNumberEditText"
        app:layout_constraintTop_toBottomOf="@id/mobileNumberText"
        android:layout_marginTop="@dimen/dimen_8"
        app:boxStrokeWidth="0dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_border"
            android:textColor="@color/edit_text_hint_color"
            android:fontFamily="@font/quicksand"
            android:textSize="14sp"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:fontFamily="@font/quicksand_bold"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberEditText"
        android:layout_marginTop="@dimen/dimen_48"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>